--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -7,7 +7,7 @@ ja:
 #      already_confirmed: "was already confirmed"
       not_locked: "は凍結されていません"
 #      not_locked: "was not locked"
- 
+
   devise:
     failure:
       unauthenticated: 'ログインしてください。'
@@ -25,9 +25,9 @@ ja:
       inactive: 'アカウントがアクティベートされていません。'
 #      inactive: 'Your account was not activated yet.'
     sessions:
-      signed_in: 'ログインしました。'
+      signed_in: ''
 #      signed_in: 'Signed in successfully.'
-      signed_out: 'ログアウトしました。'
+      signed_out: ''
 #      signed_out: 'Signed out successfully.'
     passwords:
       send_instructions: 'パスワードのリセット方法を数分以内にメールでご連絡します。'
